[package]
name = "clarity-memory"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Advanced memory storage system for Clarity - SQLite, File, Hybrid backends with vector search"

[features]
default = ["sqlite"]
# SQLite backend with FTS5 support
sqlite = ["rusqlite"]
# Hermes-memory backend integration
hermes = ["dep:hermes-memory-core", "dep:hermes-memory-store", "dep:hermes-memory-search", "dep:ulid"]

[dependencies]
# Workspace dependencies
clarity-contract = { path = "../clarity-contract" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Memory-specific dependencies
rusqlite = { version = "0.34", features = ["bundled-full"], optional = true }
sha2 = "0.10"
hex = "0.4"
md5 = "0.7"

# New dependencies for enhanced functionality
dashmap = "6"
parking_lot = "0.12"
regex = "1"

# Hermes-memory integration (optional, gated by the `hermes` feature)
hermes-memory-core = { path = "../../../hermes-memory/crates/hermes-memory-core", version = "0.1.0-dev", optional = true }
hermes-memory-store = { path = "../../../hermes-memory/crates/hermes-memory-store", version = "0.1.0-dev", optional = true }
hermes-memory-search = { path = "../../../hermes-memory/crates/hermes-memory-search", version = "0.1.0-dev", optional = true, default-features = false }
ulid = { version = "1", features = ["serde"], optional = true }

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
criterion = { version = "0.5", features = ["async_tokio"] }

# [[bench]]
# name = "store_benchmark"
# harness = false

[lints]
workspace = true
