[package]
name = "clarity-openclaw"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "OpenClaw / KimiClaw Gateway client, device identity and discovery"

[dependencies]
# Clarity contracts
clarity-contract = { path = "../clarity-contract" }

# Syncthing BEP transport for offline-capable role-context sync.
# ponytail: path dependency on git submodule; switch to crates.io once published.
syncthing-core = { path = "../../third_party/syncthing-rust/crates/syncthing-core" }
syncthing-sync = { path = "../../third_party/syncthing-rust/crates/syncthing-sync" }

# Async / WebSocket
tokio = { workspace = true }
tokio-tungstenite = { version = "0.24", features = ["__rustls-tls"] }
futures-util = "0.3"
async-trait = { workspace = true }
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Block transfer for syncthing-rust integration
bytes = { workspace = true }

# Crypto / device identity
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
sha2 = "0.10"
ring = { workspace = true }
rand = "0.8"
hex = "0.4"
base64 = { workspace = true }

# Paths / platform
dirs = "5.0"

# Observability
tracing = { workspace = true }

# HTTP client for MeshClient gateway sync
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Sync primitives
parking_lot = "0.12"

[lints]
workspace = true
