[package]
name = "clarity-shell"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Clarity egui application host: runtime, context, and app trait"

[dependencies]
egui = { workspace = true }
eframe = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
parking_lot = { workspace = true }

clarity-core = { path = "../clarity-core" }
clarity-ui = { path = "../clarity-ui" }

[lints]
workspace = true
