[package]
name = "clarity-tauri"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Clarity Desktop + Mobile GUI powered by Tauri 2"

[dependencies]
tauri = { version = "~2.10", features = [] }
tauri-plugin-log = "~2.8"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
dirs = "5.0"

# Internal crates
clarity-core = { workspace = true }
clarity-wire = { path = "../clarity-wire" }

similar = "2"

[build-dependencies]
tauri-build = { version = "~2.5", features = [] }

[[bin]]
name = "clarity-tauri"
path = "src/main.rs"
