[package]
name = "clarity-tauri"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Clarity Tauri frontend — Kimi-style conversation UI"

[[bin]]
name = "clarity-tauri"
path = "src/main.rs"

[dependencies]
# Tauri v2
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"

# Internal
clarity-core = { workspace = true }
clarity-wire = { path = "../clarity-wire" }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Async
tokio = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
