[package]
name = "clarity-thread-store"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Thread persistence abstraction for Clarity - ported from OpenAI Codex thread-store"

[dependencies]
clarity-contract = { path = "../clarity-contract" }
clarity-rollout = { path = "../clarity-rollout" }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
parking_lot = "0.12"
rusqlite = { version = "0.34", features = ["bundled-full"] }

[dev-dependencies]
tempfile = "3.9"

[lints]
workspace = true
