[package]
name = "clarity-tui"
version.workspace = true
edition.workspace = true

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
tokio = { version = "1", features = ["full"] }
clarity-core = { path = "../clarity-core" }
clarity-contract = { path = "../clarity-contract" }
clarity-llm = { path = "../clarity-llm" }
clarity-subagents = { path = "../clarity-subagents" }
clarity-wire = { path = "../clarity-wire" }
anyhow = "1.0"
unicode-width = "0.2"
chrono = "0.4"
serde_json = "1.0"
similar = "2"
uuid = { workspace = true }
ctrlc = "3.4"
pulldown-cmark = "0.9"

[lints]
workspace = true
