[package]
name = "clarity-integration-tests"
version.workspace = true
edition = "2021"
publish = false

[dependencies]
clarity-core = { path = "../../crates/clarity-core" }
clarity-telemetry = { path = "../../crates/clarity-telemetry" }
clarity-wire = { path = "../../crates/clarity-wire" }
clarity-memory = { path = "../../crates/clarity-memory" }
clarity-gateway = { path = "../../crates/clarity-gateway" }
clarity-mcp = { path = "../../crates/clarity-mcp" }

async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
tempfile = "3.9"
anyhow = "1.0"
tracing = "0.1"
futures = { workspace = true }

# Gateway HTTP test dependencies
axum = { version = "0.7" }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
http-body-util = "0.1"
tokio-tungstenite = "0.24"
parking_lot = "0.12"
